2011-03-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (mark-current-line-mouse): Bind <left-margin>
	<mouse-1> to mark-current-line-mouse.

2011-03-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Only enable dired+ in window-system.

2011-02-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: User dark frame-background-mode for terminal.

2011-02-15  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el (minormode-sub-menu): Add iimage-mode menu.

2011-01-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Disable highlight-parentheses.
	autoload drag-stuff.

2011-01-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Disable highlight-symbol-mode-post-command.

2011-01-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Enable global-hl-line-mode in terminal.
	: Enable xterm-mouse-mode for putty.
	: Support mouse scroll in terminal.

	* init-misc.el: Enable highlight-symbol-mode in terminal.

2011-01-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (flymake-no-changes-timeout): Change from 0.5 to 5.0

2011-01-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (flymake-master-make-cc-init): Fix a flymake bug.

2011-01-13  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: highlight-symbol-face's background set to gray83(eclipse).

	* init-site.el: Fix a bug for ede-cpp-root-project when not
	install global.

2011-01-10  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Don't enable flymake in default.

2010-12-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (shell-mode-hook): Enable
	ansi-color-for-comint-mode for shell-mode.
	: Enable winner-mode for window configuration.

2010-12-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Small changes for flymake python.

2010-12-13  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Small changes for flymake toolbar.

	* init-basic.el: Small changes for flymake.

2010-12-12  Meteor Liu  <meteor1113@gmail.com>
